fix county dropdown on mobile

--- a/less/map.less
+++ b/less/map.less
@@ -232,7 +232,7 @@ text {
         display: block;
         margin: 0 auto;
         width: 80%;
-        max-width: 300px;
+        max-width: 250px;
     }
 }
 .touch #county-selector { display: block; }
